# course_work_6

./: .env.sample  .gitignore  README.md  blog_fixtures.json  groups.json  mailings_fixtures.json  pyproject.toml  users_fixtures.json
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_options_alter_blogpost_title.py  0003_blogpost_publication_sign.py  0004_blogpost_slug.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mailings/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mailings/management/commands/: send_mailing.py  start_mailing.py
mailings/migrations/: 0001_initial.py  0002_mailing_end_date_alter_mailing_frequency_and_more.py  0003_alter_mailing_end_date.py  0004_alter_mailing_options.py  0005_mailing_can_block_mailing_can_disable_and_more.py  0006_alter_mailing_options_remove_mailing_can_block_and_more.py  0007_remove_client_owner_remove_mailing_owner_and_more.py  0008_alter_client_user.py  0009_alter_client_user.py
mailings/templates/: base.html
mailings/templates/mailing/: client_confirm_delete.html  (+12 more)
static/css/: album.css  home.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_username_alter_user_groups_and_more.py  0003_user_username.py  0004_alter_user_managers.py  0005_alter_user_is_active.py  0006_user_is_blocked_alter_user_is_active.py  0007_alter_user_options.py
users/templates/: login.html  recovery_form.html
(+6 files in other folders)
