[tool.poetry]
name = "course-work6"
version = "0.1.0"
description = ""
authors = ["Ilkhom"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
pip = "^24.0"
psycopg2-binary = "^2.9.9"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
