[tool.poetry]
name = "course-work6"
version = "0.1.0"
description = ""
authors = ["Ilkhom"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
pip = "^24.0"
psycopg2-binary = "^2.9.9"
apscheduler = "^3.10.4"
psycopg2 = "^2.9.9"
dotenv = "^0.0.5"
load-dotenv = "^0.1.0"
django-apscheduler = "^0.6.2"
pillow = "^10.3.0"
pytils = "^0.4.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
